plugins {
	id 'org.springframework.boot' version '2.5.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.tmax'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation fileTree(dir: 'libs', include: ['*.jar'])
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// AWS
	implementation platform('software.amazon.awssdk:bom:2.17.163')
	implementation 'software.amazon.awssdk:ec2'
	implementation 'software.amazon.awssdk:iam'
	implementation 'software.amazon.awssdk:costexplorer'
	implementation 'com.google.code.gson:gson:2.8.5'



	// Hibernate
	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
	implementation("mysql:mysql-connector-java")
	implementation files("${System.properties['java.home']}/../lib/tools.jar")
}

test {
	useJUnitPlatform()
}
